비밀번호암호화문제

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,38 @@
+# ---------------------------------------------------
+# JPA
+# ---------------------------------------------------
+# Hibernate? ?????? ???? ???? ?? ?? ????? ?? ??? ???? ? ??
+# update : ?????? ???? ???? ??, ??? ??? ????? ?? ??? ???? ?? ??? ??? ? ?? ??
+# validate : Hibernate? ?? ?????? ???? ??? ???? ???? ???? ??? ??? ??
+# create : Hibernate? ?? ??? ???? ???? ?????? ???? ?? ?????. ??? ?????? ???? ??
+# create-drop : ?????? ?? ?? ?????? ???? ????, ?????? ?? ??? ?? ???? ?????. ?? ??? ???? ??
+# none : Hibernate? ???? ???? ?? ?? ?????? ????. ???? ???? ?????? ???? ???? ???
+spring.jpa.hibernate.ddl-auto=update
+# Hibernate? ???? SQL ??? ??? ??
+spring.jpa.properties.hibernate.format_sql=true
+# Hibernate?? JDBC ?? ??? ??? ? ? ?? ???? JDBC ??? ?? ??(1000 == 1000?? SQL???)
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
+# Hibernate? INSERT ??? ?? ??? ?, ??????? ?? ???? ??? ??
+spring.jpa.properties.hibernate.order_inserts=true
+# Hibernate? UPDATE ??? ?? ??? ?, ??????? ?? ???? ??? ??
+spring.jpa.properties.hibernate.order_updates=true
+#  Hibernate? ?? ??? ???? ????? ?, ????(Versioned) ???(?? ?? ????? ??? ???? ??? ????? ?? ?? ??? ?? ??? ???? ???? ????)? ?? ??? ???? ????? ?? ??
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 
+# ---------------------------------------------------
+#JPA FOREIGN KEY PERMIT
+# ---------------------------------------------------
+# Hibernate? ???? ??????? ??(Dialect)? ???? ??
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+# Hibernate? ?? ?????? ???? MySQL? ??
+spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
+
+# ---------------------------------------------------
+#JPA SQL INIT
+# ---------------------------------------------------
+# Spring Boot ??????? ??? ? SQL ??? ????? ????? ?? ??
+# always : ?? / embedded : ??DB???? / never : SQL???? ???? / resource : ????? ?? schema.sql ? data.sql? ?? ??? ????? ??
+spring.sql.init.mode=always
+
+# DataSource ???? ????? ?? / Spring Boot ??????? ??? ? ??? ??? ????? ??? ???? ????.
+spring.jpa.defer-datasource-initialization=true
